# vmrun-python

./: .gitignore  README  README.md  setup.cfg  setup.py  vmrun.py
src/pyvmrun/: __main__.py
vmrun.egg-info/: PKG-INFO  SOURCES.txt
