[metadata]
name = pyvmrun
version = 0.2.0
author = BPengu1n
author_email = bpengu1n+pypi@penguin-sec.org
description = Platform-independent VMWare/vmrun control from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bpengu1n/pyvmrun
project_urls =
    Bug Tracker = https://github.com/bpengu1n/pyvmrun/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Topic :: Scientific/Engineering :: VMWare
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src